# Personal-Assistant

./: .gitignore  .replit  Messages - Carsen Reid.csv  api_setup_instructions.md  create_test_pdf.py  google_oauth_setup.md  ingest.py  integrations.py  main.py  oauth_setup.md  pyproject.toml  replit.nix  requirements.txt  tailwind.config.js
attached_assets/: Pasted--CARD-2-Create-the-design-token-stylesheet-text-TASK-2-8-ADD-static-styles-inde-1748813563330.txt  Pasted--Environment-updated-Reloading-shell-INFO-Will-watch-for-changes-in-these-directories--1748738062973.txt  Pasted--S-02-CREATE-static-app-bundle-jsx-with--1748814807974.txt  Pasted--S-03-OVERWRITE-static-styles-index-css-with-import-url-https-fonts-googleapis-com-css-1748814852324.txt  Pasted--TASK-4-8-CREATE-static-App-jsx-const-useState-useEffect-React-function-Header-even-1748813619117.txt  Pasted-Below-is-a-hands-free-sync-pattern-that-you-can-drop-into-the-same-Replit-project-or-any-server-1748725531356.txt  Pasted-Building-Michael-Slusher-s-AI-Assistant-Step-by-Step-Plan-Step-1-Establish-Goals-and-Requirements--1748722215573.txt  Pasted-Got-it-I-ll-review-the-entire-contents-of-the-ZIP-file-analyze-the-mockups-and-create-a-clear-and-1748803823027.txt  Pasted-Great-I-ll-generate-a-detailed-implementation-roadmap-and-set-of-instructions-that-Claude-4-0-on-Re-1748807055019.txt  Pasted-I-would-like-to-make-an-AI-assistant-for-personal-and-professional-use-I-would-like-it-to-be-able-t-1748722157496.txt  michael_training_data_v2.jsonl  (+4 more)
data/: events.db  todos.db
scripts/: __init__.py  memory_learning.py  (+2 more)
(+34 files in other folders)
